# pandora

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .oldCMakeLists2.txt  .oldCMakeLists3.txt  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  Singularity.pandora  Singularity.pandora_debug  Singularity_debug.pandora  TODO  debug_with_singularity.sh  denovo_conda_environment.yml  header.sh  install.sh  log.txt
.github/workflows/: ci.yaml  docker-image.yml
ci/: install.sh  script.sh
cmake/Hunter/: config.cmake
doc/: Doxyfile.in  Usage.md
doc/html/: annotated.html  classIndex-members.html  classIndex.html  classKmerGraph-members.html  classKmerGraph.html  classKmerHash-members.html  classKmerHash.html  classKmerNode-members.html  classKmerNode.html  classLocalGraph.html  (+81 more)
example/: README.md  make_prg_0.2.0_prototype.md5sum.txt  pandora-linux-precompiled-pandora_paper_tag1.md5sum.txt  pandora-linux-precompiled-v0.8.0-alpha.md5sum.txt  pandora-linux-precompiled-v0.8.0.gz.md5sum.txt  pandora-linux-precompiled-v0.9.0.gz.md5sum.txt  pandora-linux-precompiled-v0.9.0.md5sum.txt  run_pandora.sh  run_pandora_nodenovo.sh  run_pandora_workflow.sh
ext/: boost.cmake  gatb.cmake  gtest.cmake
include/: CLI11.hpp  Maths.h  OptionsAggregator.cpp  OptionsAggregator.h  check_kmergraph_main.h  cli_helpers.h  cluster_files.h  compare_main.h  errormessages.h  estimate_parameters.h  extract_reads.h  fastaq.h  fastaq_handler.h  fatal_error.h  forward_declarations.h  functions.h  gene_interval_info.h  generic_file.h  get_vcf_ref_main.h  globals.h  index.h  index_main.h  interval.h  inthash.h  kmergraph.h  kmergraphwithcoverage.h  kmernode.h  kseq.h  localPRG.h  localPRG_reader.h  local_assembly.h  localgraph.h  localnode.h  map_main.h  maxpath.h  merge_index_main.h  minihit.h  minihit_clusters.h  minihits.h  minimizer.h  (+25 more)
portable_binary_builder/: README.md  build_portable_binary.sh  build_portable_binary_core.sh
profiling/: massif.out.with_lazy_loading_optimisation  massif.out.with_lazy_loading_optimisation.with_reads_optimisation  massif.out.with_lazy_loading_optimisation.with_reads_optimisation.with_path_optimisation
scripts/: compare_pandora_and_gff.py  create_archives.sh  parse_diff_output_from_compare.py  simulate_reads.sh  sorina_to_rachel.py
src/: .oldCMakeLists.txt  .oldCMakeLists2.txt  check_kmergraph_main.cpp  compare_main.cpp  estimate_parameters.cpp  extract_reads.cpp  fastaq.cpp  fastaq_handler.cpp  gene_interval_info.cpp  generic_file.cpp  get_vcf_ref_main.cpp  globals.cpp  index.cpp  index_main.cpp  interval.cpp  interval.h  inthash.cpp  kmergraph.cpp  kmergraphwithcoverage.cpp  kmernode.cpp  localPRG.cpp  localPRG_reader.cpp  local_assembly.cpp  localgraph.cpp  localnode.cpp  main.cpp  map_main.cpp  maxpath.cpp  merge_index_main.cpp  minihit.cpp  minihits.cpp  minimizer.cpp  minimizermatch_file.cpp  minirecord.cpp  noise_filtering.cpp  paf_file.cpp  panedge.cpp  pangraph.cpp  pannode.cpp  panread.cpp  (+16 more)
temp/: pangenome_node_class.h  pangenome_read_class.h
test/: CMakeLists.txt  README.md  de_bruijn_graph_class.h  de_bruijn_graph_test.cpp  de_bruijn_node_test.cpp  estimate_parameters_test.cpp  extract_reads_test.cpp  fastaq_handler_test.cpp  fastaq_test.cpp  functions_test.cpp  gatb_tests.cpp  gene_interval_info_test.cpp  index_test.cpp  interval_test.cpp  inthash_test.cpp  kmergraph_test.cpp  kmergraphwithcoverage_test.cpp  kmernode_test.cpp  localPRG_test.cpp  local_assembly_test.cpp  localgraph_test.cpp  localnode_test.cpp  main.cpp  main_test.cpp  maths_test.cpp  maxpath_test.cpp  minihit_test.cpp  minihits_test.cpp  minimizer_test.cpp  minirecord_test.cpp  noise_filtering_test.cpp  panedge_test.cpp  pangenome_graph_class.h  pangraph_test.cpp  pannode_test.cpp  panread_test.cpp  pansample_test.cpp  pathAbundanceEstimator_test.cpp  path_test.cpp  sampleinfo_test.cpp  (+10 more)
test/denovo_discovery/: candidate_region_test.cpp  denovo_discovery_test.cpp  denovo_record_test.cpp  denovo_utils_test.cpp  extract_reads_test.cpp  gene_interval_info_test.cpp  local_assembly_test.cpp
test/test_cases/: GC00000008_17.2568-2577_local_assembly_test.txt  estimate_parameters_reads.fa  estimate_parameters_reads2.fa  estimate_parameters_reads3.fa  estimate_parameters_reads4.fa  kmergraph_test.covg.txt  kmergraph_test.gfa  localPRG_test.maxpath.fa  localPRG_test.nested_varsite.vcf  localPRG_test.nested_varsite_altpaths.fasta  localPRG_test.nested_varsite_kmlp.fasta  local_assembly1.fa  local_assembly2.fa  localgraph_test.gfa  loman_k12_merged_pass.mm2.sorted_1196-1216.fastq  malformatted_read_index.tsv  noisefiltering_test.pangraph.gfa  pangraph_test_save.gfa  pangraph_test_save.matrix  prg0.fa  prg0123.fa  prg0123.fa.mini  prg1.fa  prg1.fa.idx  prg2.fa  prg2.fa.idx  prg3.fa  prg3.fa.idx  prg4567.fa  read0.fa  read2.fa  read2.fq  reads.fa  reads.fq  reads_for_pileups.fa  sample_read_index.tsv  sample_read_index_no_empty_line_at_end.tsv  sample_read_index_with_repeated_samples.tsv  simulated_mixtures.kg.gfa  simulated_mixtures.lg.gfa  (+7 more)
test/test_cases/EcoliK12_profile/: run_test.sh
test/test_cases/all_oxa/: run_test.sh
test/test_cases/concatenate_VCFs/: fake_vcf1.vcf  fake_vcf2.vcf  fake_vcf3.vcf
test/test_cases/demo_oxaA/: 011116_oxaA_ERS513139_5.15.500.4_oxaA.gfa  011116_oxaA_ERS718588_5.15.500.4_oxaA.gfa  011116_oxaA_ERS718588_5.15.500.4_pangraph.gfa  ERS513139.fasta  ERS718588.fasta  oxaA_prg.fasta  perf.data  perf.data.old
test/test_cases/mixtures/: GC00000005_4.prg.fa  GC00000005_4.prg.fa.k15.w14.idx
test/test_cases/mixtures/kmer_prgs/: GC00000005_4.k15.w14.gfa
test/test_cases/mixtures/ref_genes/: ref_gene1.fa  ref_gene2.fa  ref_gene3.fa
test/test_cases/mixtures/refs/: ref1_gene.fa  ref2_gene.fa  ref3_gene.fa  ref4_gene.fa  ref5_gene.fa
test/test_cases/oxa/: JR_FAA63668_14102015_kpne_CAV1596_reads.fasta  oxa9_read.fasta  oxa_aligned_kmeans_k15_orientated.fasta  oxa_prg.fasta  run_test.sh
test/test_cases/sample_example/: pangenome.prg.fa
test/test_cases/zam/: read.fa  read_with_names.fa
toy_example/: README.md  run_pandora_nodenovo.sh
(+161 files in other folders)
